# siscgpt

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
.astro/: config.yaml
app/: app.py
siscgpt_dw/: dbt_project.yml
