[project]
name = "siscgpt"
version = "0.1.0"
description = ""
authors = [
    {name = "Ygor Rodrigues",email = "ygorsarmento@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core (>=1.11.8,<2.0.0)",
    "dbt-postgres (>=1.10.0,<2.0.0)",
    "duckdb (>=1.5.2,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
